# signaltower

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: 99-k8055.rules  install.sh  signaltower.service  upgrade.sh
signaltower/: app.py  hardware.py  state.py  watchdog.py
